Add machine translation

--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -241,19 +241,21 @@ msgstr "これで全てが説明されたので、さっそくコーディング
 
 #. type: Title ==
 #: upstream/_guides/building-my-first-extension.adoc:90
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Project setup"
-msgstr ""
+msgstr "プロジェクトの設定"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:93
+#, fuzzy
 msgid "Extensions can be built with either Maven or Gradle. Depending on your build tool, setup can be done as following:"
-msgstr ""
+msgstr "エクステンションは、MavenまたはGradleのいずれかでビルドできます。お使いのビルドツールに応じて、以下のようにセットアップを行います。"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:95
+#, fuzzy
 msgid "The Gradle extension plugin is still experimental and may be missing features available in the Maven plugin."
-msgstr ""
+msgstr "Gradle拡張プラグインはまだ実験的なもので、Mavenプラグインで利用できる機能が欠けている可能性があります。"
 
 #. type: Title ===
 #: upstream/_guides/building-my-first-extension.adoc:96
@@ -1089,23 +1091,27 @@ msgstr "Quarkus は、 `create-extension` Maven Mojo を提供し、拡張プロ
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:397
+#, fuzzy
 msgid "As mentionned before, an extension is composed of two modules:"
-msgstr ""
+msgstr "前述したように、エクステンションは2つのモジュールで構成されています。"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:399
+#, fuzzy
 msgid "`runtime`"
-msgstr ""
+msgstr "`runtime`"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:400
+#, fuzzy
 msgid "`deployment`"
-msgstr ""
+msgstr "`deployment`"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:402
+#, fuzzy
 msgid "We are going to create a Gradle multi module project with those two modules. Here is a simple `settings.gradle` example file:"
-msgstr ""
+msgstr "この2つのモジュールを使って、Gradleのマルチモジュールプロジェクトを作ってみます。ここでは、簡単な `settings.gradle` のサンプルファイルを紹介します。"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:414
@@ -1137,18 +1143,21 @@ msgstr "package org.acme.greeting.extension;\n"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:421
+#, fuzzy
 msgid "Configure the quarkus extension plugin version"
-msgstr ""
+msgstr "quarkus拡張プラグインのバージョン設定"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:422
+#, fuzzy
 msgid "Include both `runtime` and `deployment` modules"
-msgstr ""
+msgstr "`runtime` と `deployment` の両方のモジュールを含む"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:424
+#, fuzzy
 msgid "Here is a sample of a root `build.gradle` file:"
-msgstr ""
+msgstr "以下は、ルート `build.gradle` ファイルのサンプルです。"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:430
@@ -1170,23 +1179,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:437
+#, fuzzy
 msgid "Apply the `java-library` plugin for all sub-modules"
-msgstr ""
+msgstr "すべてのサブモジュールに `java-library` プラグインを適用する"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:438
+#, fuzzy
 msgid "Apply the `maven-publish` plugin used to publish our artifacts"
-msgstr ""
+msgstr "成果物の公開に使用する `maven-publish` プラグインの適用"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:439
+#, fuzzy
 msgid "Globally set the group id used for publication"
-msgstr ""
+msgstr "公開に使用するグループIDをグローバルに設定"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:442
+#, fuzzy
 msgid "The `io.quarkus.extension` plugin will be used in order to help us building the extension.  The plugin will *only* be applied to the `runtime` module."
-msgstr ""
+msgstr "`io.quarkus.extension` プラグインは、拡張機能を構築するために使用されます。このプラグインは、 `runtime` モジュールに *のみ*適用されます。"
 
 #. type: Title ====
 #: upstream/_guides/building-my-first-extension.adoc:443
@@ -1197,8 +1210,9 @@ msgstr "Deployment モジュール"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:447
+#, fuzzy
 msgid "The deployment module does not require any specific plugin.  Here is an example of a minimal `build.gradle` file for the `deployment` module:"
-msgstr ""
+msgstr "デプロイメントモジュールは、特定のプラグインを必要としません。以下は、 `deployment` モジュールの最小の `build.gradle` ファイルの例です。"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:451
@@ -1259,13 +1273,15 @@ msgstr "コンパイラーのアノテーションプロセッサーに `quarkus
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:470
+#, fuzzy
 msgid "Generate extension description files."
-msgstr ""
+msgstr "拡張子の説明ファイルを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:472
+#, fuzzy
 msgid "Here is an example of `build.gradle` file for the `runtime` module:"
-msgstr ""
+msgstr "以下は、 `runtime` モジュール用の `build.gradle` ファイルの例です。"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:478
@@ -1295,8 +1311,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:488
+#, fuzzy
 msgid "Apply the `io.quarkus.extension` plugin."
-msgstr ""
+msgstr "`io.quarkus.extension` のプラグインを適用します。"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:489
@@ -1353,8 +1370,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:511
+#, fuzzy
 msgid "For Gradle, add the dependency in `./greeting-extension/runtime/build.gradle` file:"
-msgstr ""
+msgstr "Gradleの場合は、 `./greeting-extension/runtime/build.gradle` ファイルに依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:515
