--- a/l10n/po/ja_JP/_guides/deploying-to-google-cloud.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-google-cloud.adoc.po
@@ -570,14 +570,15 @@ msgstr "PostgreSQLのソケットファクトリを使用することは、 link
 
 #. type: Title ===
 #: upstream/_guides/deploying-to-google-cloud.adoc:274
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using Cloud SQL with a reactive SQL client"
-msgstr ""
+msgstr "リアクティブSQLクライアントでのCloud SQLの使用"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-google-cloud.adoc:279
+#, fuzzy
 msgid "You can also use one of our reactive SQL client instead of the JDBC client.  To do so with Cloud SQL, add the following dependency (adjust the classifier depending on your platform):"
-msgstr ""
+msgstr "また、JDBCクライアントの代わりに、弊社のリアクティブSQLクライアントの1つを使用することもできます。Cloud SQLでこれを行うには、以下の依存関係を追加してください（プラットフォームに応じて分類子を調整してください）。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-google-cloud.adoc:287
@@ -592,8 +593,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-google-cloud.adoc:290
+#, fuzzy
 msgid "Then configure your reactive datasource with no hostname and with the Netty native transport:"
-msgstr ""
+msgstr "次に、リアクティブデータソースをホスト名なし、Nettyネイティブトランスポートで設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-google-cloud.adoc:295
@@ -605,8 +607,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-google-cloud.adoc:298
+#, fuzzy
 msgid "This only works when your application is running inside a Google Cloud managed runtime like App Engine."
-msgstr ""
+msgstr "これは、アプリケーションがApp EngineなどのGoogle Cloudマネージドランタイム内で実行されている場合にのみ機能します。"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-google-cloud.adoc:299
