--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1094,44 +1094,51 @@ msgstr "そういえば、本番ではデータベーススキーマを落とさ
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm.adoc:536
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Automatically transitioning to Flyway to Manage Schemas"
-msgstr ""
+msgstr "スキーマを管理するためのFlywayへの自動移行"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:542
+#, fuzzy
 msgid "If you have the xref:flyway.adoc[Flyway extension] installed when running in development mode, Quarkus provides a simple way to turn your Hibernate ORM auto generated schema into a Flyway migration file. This is intended to make is easy to move from the early development phase, where Hibernate can be used to quickly setup the schema, to the production phase, where Flyway is used to manage schema changes."
-msgstr ""
+msgstr "開発モードで実行しているときに link:flyway.html[Flywayエクステンション]がインストールされている場合、QuarkusはHibernate ORMで自動生成されたスキーマをFlyway移行ファイルに変換する簡単な方法を提供します。これは、Hibernateを使用してスキーマを迅速にセットアップする開発初期段階から、Flywayを使用してスキーマの変更を管理する本番段階への移行を容易にすることを目的としています。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:545
+#, fuzzy
 msgid "To use this feature simply open the Dev UI when the `quarkus-flyway` extension is installed and click in the `Datasources` link in the Flyway pane. Hit the `Create Initial Migration` button and the following will happen:"
-msgstr ""
+msgstr "この機能を使用するには、 `quarkus-flyway` 拡張機能がインストールされている状態で Dev UI を開き、Flyway ペインの `Datasources` リンクをクリックします。 `Create Initial Migration` ボタンを押すと、以下のようになります。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:547
+#, fuzzy
 msgid "A `db/migration/V1.0.0__\\{appname\\}.sql` file will be created, containing the SQL Hibernate is running to generate the schema"
-msgstr ""
+msgstr "スキーマを生成するためにHibernateが実行するSQLを含んだ `db/migration/V1.0.0__{appname}.sql` ファイルが作成されます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:548
+#, fuzzy
 msgid "`quarkus.flyway.baseline-on-migrate` will be set, telling Flyway to automatically create its baseline tables"
-msgstr ""
+msgstr "`quarkus.flyway.baseline-on-migrate` が設定され、Flywayがベースラインテーブルを自動的に作成するようになります。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:549
+#, fuzzy
 msgid "`quarkus.flyway.migrate-at-start` will be set, telling Flyway to automatically apply migrations on application startup"
-msgstr ""
+msgstr "`quarkus.flyway.migrate-at-start` が設定され、アプリケーションの起動時にFlywayが自動的にマイグレーションを適用するようになります。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:550
+#, fuzzy
 msgid "`%dev.quarkus.flyway.clean-at-start` and ``%test.quarkus.flyway.clean-at-start` will be set, to clean the DB after reload in dev/test mode"
-msgstr ""
+msgstr "`%dev.quarkus.flyway.clean-at-start` と ``%test.quarkus.flyway.clean-at-start` が設定されます。これは、dev/test モードでリロードした後、DB をクリーンにするためです。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:553
+#, fuzzy
 msgid "This button is simply a convenience to quickly get you started with Flyway, it is up to you to determine how you want to manage your database schemas in production. In particular the `migrate-at-start` setting may not be right for all environments."
-msgstr ""
+msgstr "このボタンは、Flywayを素早く使い始めるための単なる便宜的なもので、本番環境でデータベーススキーマをどのように管理するかはお客様の判断に委ねられます。特に、 `migrate-at-start` の設定は、すべての環境に適しているとは限りません。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm.adoc:555
