--- a/l10n/po/ja_JP/_guides/http-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/http-reference.adoc.po
@@ -287,14 +287,15 @@ msgstr "`redirect` または `disabled` を使用していて、SSL 証明書ま
 
 #. type: Title ==
 #: upstream/_guides/http-reference.adoc:146
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Additional HTTP Headers"
-msgstr ""
+msgstr "追加のHTTPヘッダー"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:149
+#, fuzzy
 msgid "To enable HTTP headers to be sent on every response, add the following properties:"
-msgstr ""
+msgstr "すべてのレスポンスにHTTPヘッダーを送信するようにするには、以下のプロパティを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/http-reference.adoc:153
@@ -304,13 +305,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:156
+#, fuzzy
 msgid "This will include the `X-Content-Type-Options: nosniff` HTTP Header on responses for requests performed on any resource in the application."
-msgstr ""
+msgstr "これにより、アプリケーション内の任意のリソースに対して実行されるリクエストのレスポンスに、 `X-Content-Type-Options: nosniff` HTTP ヘッダーが含まれます。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:158
+#, fuzzy
 msgid "You can also specify a `path` pattern and the HTTP `methods` the header needs to be applied:"
-msgstr ""
+msgstr "また、 `path` パターンと、ヘッダーを適用する必要がある HTTP `methods` を指定することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/http-reference.adoc:164
@@ -323,8 +326,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:167
+#, fuzzy
 msgid "This will apply the `Pragma` header only when the `/headers/pragma` resource is called with a `GET` or a `HEAD` method"
-msgstr ""
+msgstr "これにより、 `/headers/pragma` リソースが `GET` または `HEAD` メソッドで呼び出された場合にのみ、 `Pragma` ヘッダーが適用されます。"
 
 #. type: Title ==
 #: upstream/_guides/http-reference.adoc:170
