--- a/l10n/po/ja_JP/_guides/lra.adoc.po
+++ b/l10n/po/ja_JP/_guides/lra.adoc.po
@@ -88,8 +88,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/lra.adoc:75
+#, fuzzy
 msgid "`quarkus-narayana-lra` needs to be complemented with a server JAX-RS implementation and a REST Client implementation in order to work.  This means that users should also have either `quarkus-resteasy-jackson` and `quarkus-rest-client` or `quarkus-resteasy-reactive-jackson` and `quarkus-rest-client-reactive` dependencies in their application."
-msgstr ""
+msgstr "`quarkus-narayana-lra` が動作するためには、サーバーの JAX-RS 実装と REST クライアントの実装で補完する必要があります。つまり、ユーザーのアプリケーションには、 `quarkus-resteasy-jackson` と `quarkus-rest-client` または `quarkus-resteasy-reactive-jackson` と `quarkus-rest-client-reactive` のいずれかの依存関係が必要です。"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:79
