--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -1031,8 +1031,9 @@ msgstr "<li> <p>と、アプリケーションの設定値である</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:558
+#, fuzzy
 msgid "... or as a normal JAX-RS `@HeaderParam` annotated argument"
-msgstr ""
+msgstr "<li> <p>または、通常のJAX-RS `@HeaderParam` アノテーションされた引数として</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:560
