--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -1060,8 +1060,9 @@ msgstr "ここで私たちは注入します。 `JsonWebToken`"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:571
+#, fuzzy
 msgid "Here we inject the `birthday` claim as `String` - this is why the `@RequestScoped` scope is now required."
-msgstr ""
+msgstr "ここでは、 `birthday` の主張を `String` として注入しています。これが、 `@RequestScoped` のスコープが必要になった理由です。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:572
@@ -1189,19 +1190,21 @@ msgstr "参照"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:637
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Supported Injection Scopes"
-msgstr ""
+msgstr "サポートされているインジェクションスコープ"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:640
+#, fuzzy
 msgid "`@ApplicationScoped`, `@Singleton` and `@RequestScoped` outer bean injection scopes are all supported when an `org.eclipse.microprofile.jwt.JsonWebToken` is injected, with the `@RequestScoped` scoping for `JsonWebToken` enforced to ensure the current token is represented."
-msgstr ""
+msgstr "`@ApplicationScoped`, `@Singleton` および `@RequestScoped` アウター・ビーン・インジェクション・スコープは、 `org.eclipse.microprofile.jwt.JsonWebToken` がインジェクションされるときにすべてサポートされており、 `JsonWebToken` の `@RequestScoped` スコーピングは、現在のトークンが確実に表現されるように強制されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:642
+#, fuzzy
 msgid "However, `@RequestScoped` must be used when the individual token claims are injected as simple types such as `String`, for example:"
-msgstr ""
+msgstr "ただし、個々のトークン・クレームが `String` などの単純な型として注入されている場合には、 `@RequestScoped` を使用する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:650
@@ -1224,8 +1227,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:662
+#, fuzzy
 msgid "Note you can also use the injected `JsonWebToken` to access the individual claims in which case setting `@RequestScoped` is not necessary."
-msgstr ""
+msgstr "なお、注入された `JsonWebToken` を使用して個々の請求項にアクセスすることもでき、その場合は `@RequestScoped` を設定する必要はありません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:664
@@ -1420,8 +1424,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:755
+#, fuzzy
 msgid "Please also see the <<add-smallrye-jwt, How to Add SmallRye JWT directly>> section about using `JWTParser` without the `HTTP` support provided by `quarkus-smallrye-jwt`."
-msgstr ""
+msgstr "`quarkus-smallrye-jwt` が提供する `HTTP` のサポートなしに `JWTParser` を使用することについては、 link:#add-smallrye-jwt[「SmallRye JWT を直接追加する方法]」のセクションも参照してください。"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:756
@@ -1771,14 +1776,15 @@ msgstr "トークンの検証が行われていない場合、パブリックメ
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:949
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "How to Add SmallRye JWT directly"
-msgstr ""
+msgstr "SmallRye JWTを直接追加する方法"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:952
+#, fuzzy
 msgid "If you work with Quarkus extensions which do not support `HTTP` (for example, `Quarkus GRPC`) or provide their own extension specific `HTTP` support conflicting with the one offered by `quarkus-smallrye-jwt` and `Vert.x HTTP` (example, `Quarkus Amazon Lambda`) and you would like to <<jwt-parser, Parse and Verify JsonWebToken with JWTParser>> then please use `smallrye-jwt` directly instead of `quarkus-smallrye-jwt`."
-msgstr ""
+msgstr "`HTTP` をサポートしていないQuarkusの拡張機能を使用している場合（たとえば、 `Quarkus GRPC` ）、または、 `quarkus-smallrye-jwt` および `Vert.x HTTP` が提供するものと競合する独自の拡張機能固有の `HTTP` サポートを提供している場合（たとえば、 `Quarkus Amazon Lambda` ）、 link:#jwt-parser[JWTParserを使用してJsonWebTokenを解析および]検証したい場合は、 `quarkus-smallrye-jwt` の代わりに `smallrye-jwt` を直接使用してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:954
@@ -1798,8 +1804,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:964
+#, fuzzy
 msgid "and update `application.properties` to get all the CDI producers provided by `smallrye-jwt` included as follows:"
-msgstr ""
+msgstr "で、 `application.properties` を更新して、 `smallrye-jwt` が提供するすべての CDI プロデューサーを次のように含めます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:969
