--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -413,8 +413,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:197
+#, fuzzy
 msgid "Adding a `%prod.` profile prefix to `quarkus.oidc.auth-server-url` ensures that `Dev Services for Keycloak` will launch a container for you when the application is run in a dev mode. See <<keycloak-dev-mode, Running the Application in Dev mode>> section below for more information."
-msgstr ""
+msgstr "`quarkus.oidc.auth-server-url` に `%prod.` プロファイルのプレフィックスを追加すると、アプリケーションが開発モードで実行されたときに `Dev Services for Keycloak` がコンテナを起動するようになります。詳しくは、後述の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」をご覧ください。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:199
@@ -431,8 +432,9 @@ msgstr "Keycloakサーバーの起動と設定"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:203
+#, fuzzy
 msgid "Do not start the Keycloak server when you run the application in a dev mode - `Dev Services for Keycloak` will launch a container. See <<keycloak-dev-mode, Running the Application in Dev mode>> section below for more information."
-msgstr ""
+msgstr "アプリケーションをdevモードで実行するときは、Keycloakサーバーを起動しないでください - `Dev Services for Keycloak` はコンテナを起動します。詳細については、下記の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:205
@@ -462,18 +464,21 @@ msgstr "{quickstarts-tree-url}/security-keycloak-authorization-quickstart/config
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:220
+#, fuzzy
 msgid "After importing the realm you can see the resource permissions:"
-msgstr ""
+msgstr "レルムをインポートすると、リソースのパーミッションが表示されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:222
+#, fuzzy
 msgid "image::keycloak-authorization-permissions.png[alt=Keycloak Authorization Permissions,role=\"center\"]."
-msgstr ""
+msgstr "image::keycloak-authorization-permissions.png[alt=Keycloak Authorization Permissions,role=\"center\"]."
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:224
+#, fuzzy
 msgid "It explains why the endpoint has no `@RolesAllowed` annotations - the resource access permissions are set directly in Keycloak."
-msgstr ""
+msgstr "これは、エンドポイントに `@RolesAllowed` のアノテーションがない理由を説明しています。リソースのアクセス許可は、Keycloakで直接設定されます。"
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:226
@@ -484,44 +489,52 @@ msgstr "アプリケーションの実行と使用"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:229
+#, fuzzy
 msgid "To run the application in dev mode, use `./mvnw clean compile quarkus:dev`. link:security-openid-connect-dev-services[Dev Services for Keycloak] will launch a Keycloak container and import a `quarkus-realm.json`."
-msgstr ""
+msgstr "アプリケーションを開発モードで実行するには、 `./mvnw clean compile quarkus:dev`. link:security-openid-connect-dev-services[Dev Services for Keycloak]は、Keycloakコンテナを起動し、 `quarkus-realm.json` をインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:231
+#, fuzzy
 msgid "Open a link:dev-ui[Dev UI] available at http://localhost:8080/q/dev[/q/dev] and click on a `Provider: Keycloak` link in an `OpenId Connect` `Dev UI` card."
-msgstr ""
+msgstr "link:http://localhost:8080/q/dev[/q/dev]にある link:dev-ui[Dev UI]を開き、 `OpenId Connect` `Dev UI` カードの `Provider: Keycloak` リンクをクリックします。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:233
+#, fuzzy
 msgid "You will be asked to login into a `Single Page Application` provided by `OpenId Connect Dev UI`:"
-msgstr ""
+msgstr "`OpenId Connect Dev UI` が提供する `Single Page Application` へのログインを求められます。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:235
+#, fuzzy
 msgid "Login as `alice` (password: `alice`) who only has a `User Permission` to access the `/api/users/me` resource"
-msgstr ""
+msgstr "`/api/users/me` リソースにアクセスするために `User Permission` のみを持つ `alice` (パスワード: `alice`) としてログインします。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:236
+#, fuzzy
 msgid "accessing `/api/admin` will return `403`"
-msgstr ""
+msgstr "`/api/admin` にアクセスすると、次のようになります。 `403`"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:237
 #: upstream/_guides/security-keycloak-authorization.adoc:240
+#, fuzzy
 msgid "accessing `/api/users/me` will return `200`"
-msgstr ""
+msgstr "`/api/users/me` にアクセスすると、次のようになります。 `200`"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:238
+#, fuzzy
 msgid "Logout and login as `admin` (password: `admin`) who has both `Admin Permission` to access the `/api/admin` resource and `User Permission` to access the `/api/users/me` resource"
-msgstr ""
+msgstr "`/api/admin` リソースにアクセスするための `Admin Permission` と `/api/users/me` リソースにアクセスするための `User Permission` の両方を持っている `admin` (パスワード: `admin`)としてログアウトし、ログインする。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:239
+#, fuzzy
 msgid "accessing `/api/admin` will return `200`"
-msgstr ""
+msgstr "`/api/admin` にアクセスすると、次のようになります。 `200`"
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:241
@@ -606,13 +619,15 @@ msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:282
+#, fuzzy
 msgid "See <<keycloak-dev-mode, Running the Application in Dev mode>> section above about testing your application in a dev mode."
-msgstr ""
+msgstr "Devモードでのアプリケーションのテストについては、上記の「 link:#keycloak-dev-mode[Running the Application in Dev mode]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:284
+#, fuzzy
 msgid "You can test the application launched in JVM or Native modes with `curl`."
-msgstr ""
+msgstr "JVMまたはNativeモードで起動したアプリケーションのテストは、 `curl` 。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:286
