--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -55,9 +55,9 @@ msgstr "マルチテナントへの対応方法については、 link:security-
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:21
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quickstart"
-msgstr ""
+msgstr "クイックスタート"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:23
@@ -404,8 +404,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:185
+#, fuzzy
 msgid "Adding a `%prod.` profile prefix to `quarkus.oidc.auth-server-url` ensures that `Dev Services for Keycloak` will launch a container for you when the application is run in a dev mode. See <<keycloak-dev-mode, Running the Application in Dev mode>> section below for more information."
-msgstr ""
+msgstr "`quarkus.oidc.auth-server-url` に `%prod.` プロファイルのプレフィックスを追加すると、アプリケーションが開発モードで実行されたときに `Dev Services for Keycloak` がコンテナを起動するようになります。詳しくは、後述の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:186
@@ -415,8 +416,9 @@ msgstr "Keycloakサーバーの起動と設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:189
+#, fuzzy
 msgid "Do not start the Keycloak server when you run the application in a dev mode - `Dev Services for Keycloak` will launch a container. See <<keycloak-dev-mode, Running the Application in Dev mode>> section below for more information."
-msgstr ""
+msgstr "アプリケーションをdevモードで実行するときは、Keycloakサーバーを起動しないでください - `Dev Services for Keycloak` はコンテナを起動します。詳細については、下記の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:191
@@ -458,44 +460,52 @@ msgstr "アプリケーションの実行と使用"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:210
+#, fuzzy
 msgid "To run the application in a dev mode, use `./mvnw clean compile quarkus:dev`. link:security-openid-connect-dev-services[Dev Services for Keycloak] will launch a Keycloak container and import a `quarkus-realm.json`."
-msgstr ""
+msgstr "アプリケーションを開発モードで実行するには、 `./mvnw clean compile quarkus:dev`. link:security-openid-connect-dev-services[Dev Services for Keycloak]は、Keycloakコンテナを起動し、 `quarkus-realm.json` をインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:212
+#, fuzzy
 msgid "Open a link:dev-ui[Dev UI] available at http://localhost:8080/q/dev[/q/dev] and click on a `Provider: Keycloak` link in an `OpenId Connect` `Dev UI` card."
-msgstr ""
+msgstr "link:http://localhost:8080/q/dev[/q/dev]にある link:dev-ui[Dev UI]を開き、 `OpenId Connect` `Dev UI` カードの `Provider: Keycloak` リンクをクリックします。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:214
+#, fuzzy
 msgid "You will be asked to login into a `Single Page Application` provided by `OpenId Connect Dev UI`:"
-msgstr ""
+msgstr "`OpenId Connect Dev UI` が提供する `Single Page Application` へのログインを求められます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:216
+#, fuzzy
 msgid "Login as `alice` (password: `alice`) who has a `user` role"
-msgstr ""
+msgstr "`user` の役割を持つ `alice` (パスワード: `alice`)としてログインします。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:217
+#, fuzzy
 msgid "accessing `/api/admin` will return `403`"
-msgstr ""
+msgstr "`/api/admin` にアクセスすると、次のようになります。 `403`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:218
 #: upstream/_guides/security-openid-connect.adoc:221
+#, fuzzy
 msgid "accessing `/api/users/me` will return `200`"
-msgstr ""
+msgstr "`/api/users/me` にアクセスすると、次のようになります。 `200`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:219
+#, fuzzy
 msgid "Logout and login as `admin` (password: `admin`) who has both `admin` and `user` roles"
-msgstr ""
+msgstr "`admin` と `user` の両方のロールを持つ `admin` (パスワード: `admin`)としてログアウトし、ログインする。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:220
+#, fuzzy
 msgid "accessing `/api/admin` will return `200`"
-msgstr ""
+msgstr "`/api/admin` にアクセスすると、次のようになります。 `200`"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:222
@@ -580,13 +590,15 @@ msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:266
+#, fuzzy
 msgid "See <<keycloak-dev-mode, Running the Application in Dev mode>> section above about testing your application in a dev mode."
-msgstr ""
+msgstr "Devモードでのアプリケーションのテストについては、上記の「 link:#keycloak-dev-mode[Running the Application in Dev mode]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:268
+#, fuzzy
 msgid "You can test the application launched in JVM or Native modes with `curl`."
-msgstr ""
+msgstr "JVMまたはNativeモードで起動したアプリケーションのテストは、 `curl` 。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:271
@@ -661,8 +673,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:319
+#, fuzzy
 msgid "Please also see the <<integration-testing-keycloak-devservices, Dev Services for Keycloak>> section below about writing the integration tests which depend on `Dev Services for Keycloak`."
-msgstr ""
+msgstr "`Dev Services for Keycloak` に依存する統合テストの記述については、以下の「 link:#integration-testing-keycloak-devservices[Keycloak の開発サービス]」のセクションも参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:320
@@ -720,8 +733,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:354
+#, fuzzy
 msgid "Injection of `JsonWebToken` is supported in `@ApplicationScoped`, `@Singleton` and `@RequestScoped` scopes however the use of `@RequestScoped` is required if the individual claims are injected as simple types, please see link:security-jwt#supported-injection-scopes[Support Injection Scopes for JsonWebToken and Claims] for more details."
-msgstr ""
+msgstr "`JsonWebToken` の注入は、 `@ApplicationScoped` 、 `@Singleton` 、 `@RequestScoped` のスコープでサポートされていますが、個々の請求項が単純な型として注入される場合は、 `@RequestScoped` の使用が必要となります。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:356
@@ -1084,9 +1098,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect.adoc:547
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Cross Origin Resource Sharing"
-msgstr ""
+msgstr "クロスオリジンのリソース共有"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:550
@@ -1303,8 +1317,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:668
+#, fuzzy
 msgid "Note that the `quarkus-test-oidc-server` extension includes a signing RSA private key file in a `JSON Web Key` (`JWK`) format and points to it with a `smallrye.jwt.sign.key.location` configuration property. It allows to use a no argument `sign()` operation to sign the token."
-msgstr ""
+msgstr "`quarkus-test-oidc-server` 拡張機能には、 `JSON Web Key` ( `JWK`) 形式の署名用 RSA 秘密鍵ファイルが含まれており、 `smallrye.jwt.sign.key.location` 構成プロパティでそれを指すことに注意してください。これにより、引数なしの `sign()` 操作を使用して、トークンに署名することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:671
