--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -649,14 +649,15 @@ msgstr "Quarkusは非常に包括的な HashiCorp Vault のサポートを提供
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:265
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Secure serialization"
-msgstr ""
+msgstr "セキュア・シリアライゼーション"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:268
+#, fuzzy
 msgid "When using Security along with RESTEasy Reactive and Jackson, Quarkus can limit the fields that are included in JSON serialization based on the configured security. See the link:resteasy-reactive.adoc#secure-serialization[RESTEasy Reactive documentation] for details."
-msgstr ""
+msgstr "RESTEasy ReactiveおよびJacksonと一緒にSecurityを使用する場合、Quarkusは設定されたSecurityに基づいてJSONシリアライゼーションに含まれるフィールドを制限することができます。詳細については、 link:resteasy-reactive.adoc#secure-serialization[RESTEasy Reactiveのドキュメント]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:269
