--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -155,8 +155,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/spring-web.adoc:75
+#, fuzzy
 msgid "`quarkus-spring-web` needs to be complemented with either `quarkus-resteasy-jackson` or `quarkus-resteasy-reactive-jackson` in order to work."
-msgstr ""
+msgstr "`quarkus-spring-web` は、 `quarkus-resteasy-jackson` または `quarkus-resteasy-reactive-jackson` のいずれかで補完されないと動作しません。"
 
 #. type: Title ==
 #: upstream/_guides/spring-web.adoc:77
