--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -2980,14 +2980,15 @@ msgstr "上記の配列、リスト、マップ"
 
 #. type: Title ====
 #: upstream/_guides/writing-extensions.adoc:1451
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Injecting Configuration into Recorders"
-msgstr ""
+msgstr "レコーダーへの設定の注入"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1458
+#, fuzzy
 msgid "Configuration objects with phase `RUNTIME` or `BUILD_AND_RUNTIME_FIXED` can be injected into recorders via constructor injection. Just create a constructor that takes the configuration objects the recorder needs. If the recorder has multiple constructors you can annotate the one you want Quarkus to use with `@Inject`. If the recorder wants to inject runtime config but is also used at static init time then it needs to inject a `RuntimeValue<ConfigObject>`, this value will only be set when the runtime methods are being invoked."
-msgstr ""
+msgstr "フェーズが `RUNTIME` または `BUILD_AND_RUNTIME_FIXED` の構成オブジェクトは、コンストラクタ インジェクションによってレコーダに注入することができます。レコーダーが必要とする設定オブジェクトを受け取るコンストラクタを作成するだけです。レコーダーに複数のコンストラクタがある場合は、Quarkusに使用させたいコンストラクタに `@Inject` で注釈を付けることができます。レコーダーが実行時の設定を注入したいが、静的な初期化時にも使用される場合は、 `RuntimeValue&amp;lt;ConfigObject&amp;gt;` を注入する必要があります。この値は、実行時のメソッドが呼び出されたときにのみ設定されます。"
 
 #. type: Title ====
 #: upstream/_guides/writing-extensions.adoc:1459
