--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -3404,8 +3404,9 @@ msgstr "既存のリソースの利用"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1267
+#, fuzzy
 msgid "The <<service_binding, Service Binding>> covers, how the application will consume the bound service.  However, we still haven't touched on how the actual binding happens. The binding is the responsibility of the Service Binding Operator. The user provides a `ServiceBinding` resource which expresses which application will bound to which services and the operator is responsible for mounting the required files to container."
-msgstr ""
+msgstr "link:#service_binding[サービスバインディング]では、アプリケーションがどのようにしてバインディングされたサービスを利用するかを説明します。しかし、実際のバインディングがどのように行われるかについては、まだ触れていません。バインディングは、サービス・バインディング・オペレーターの責任です。ユーザは、どのアプリケーションがどのサービスにバインドされるかを表現する `ServiceBinding` リソースを提供し、オペレータは必要なファイルをコンテナにマウントする責任を負います。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1269
@@ -3438,8 +3439,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1292
+#, fuzzy
 msgid "The `quarkus-kubernetes-service-binding` extension provides a more compact way of expressing this information:"
-msgstr ""
+msgstr "`quarkus-kubernetes-service-binding` 拡張機能は、この情報をよりコンパクトに表現するためのものです。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-kubernetes.adoc:1297
@@ -3451,13 +3453,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1301
+#, fuzzy
 msgid "By adding the above configuration properties inside your `application.properties` the `quarkus-kubernetes` in cooperation with the `quarkus-kubernetes-service-binding` extension will generate the `ServiceBinding` for you.  And this is something that is meant to work regardles of the kubernets flavour you are using, so it's expected to also work for Openshift and Knative, without any additional action from the user."
-msgstr ""
+msgstr "上記の設定プロパティを `application.properties` 内に追加することで、 `quarkus-kubernetes` が `quarkus-kubernetes-service-binding` 拡張機能と連携して `ServiceBinding` を生成してくれます。また、これは使用しているkubernetsのフレーバーに関わらず動作することを意図しており、OpenshiftやKnativeでもユーザーが追加の操作をすることなく動作することが期待されています。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1303
+#, fuzzy
 msgid "In the configuration above `db-demo` has a double role. It is used to correlate / group `api-version` and `kind` together, but it's also used as the `name` of the custom resource. The later can be overriden if needed. For example:"
-msgstr ""
+msgstr "上記の構成では、 `db-demo` は二重の役割を持っています。 `api-version` と `kind` を関連付けてグループ化するために使用されていますが、カスタムリソースの `name` としても使用されています。後者は必要に応じてオーバーライドすることができます。例えば"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-kubernetes.adoc:1309
@@ -3470,13 +3474,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1312
+#, fuzzy
 msgid "Advanced, features (e.g. `ServiceBiniding` mappings) are not yet supported."
-msgstr ""
+msgstr "高度な機能（例： `ServiceBiniding` マッピング）はまだサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1314
+#, fuzzy
 msgid "Here is the list of: link:https://github.com/redhat-developer/service-binding-operator#known-bindable-operators[Known bindable Operators]."
-msgstr ""
+msgstr "ここでは、そのリストをご紹介します。 link:https://github.com/redhat-developer/service-binding-operator#known-bindable-operators[既知の結合可能な演算子]です。"
 
 #. type: delimited block =
 #: upstream/_guides/deploying-to-kubernetes.adoc:1319
