--- a/l10n/po/ja_JP/_guides/flyway.adoc.po
+++ b/l10n/po/ja_JP/_guides/flyway.adoc.po
@@ -355,16 +355,18 @@ msgstr "Flyway インスタンスの直接使用"
 
 #. type: Title ==
 #: upstream/_guides/flyway.adoc:193
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Flyway and Hibernate ORM"
-msgstr ""
+msgstr "FlywayとHibernate ORM"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:196
+#, fuzzy
 msgid "When using Flyway together with Hibernate ORM, you can use the Dev UI to generate the initial schema creation script."
-msgstr ""
+msgstr "FlywayをHibernate ORMと一緒に使用する場合、Dev UIを使用して初期スキーマ作成スクリプトを生成できます。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:197
+#, fuzzy
 msgid "You can find more information about this feature in the xref:hibernate-orm.adoc#flyway[Hibernate ORM guide]."
-msgstr ""
+msgstr "この機能の詳細については、 link:hibernate-orm.html#flyway[Hibernate ORM ガイド]を参照してください。"
