--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -291,8 +291,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:177
+#, fuzzy
 msgid "You can also use the `setup` attribute on the `@WithKubernetesTestServer` annotation to provide a class that will configure the `KubernetesServer` instance:"
-msgstr ""
+msgstr "また、 `@WithKubernetesTestServer` アノテーションの `setup` 属性を使用して、 `KubernetesServer` インスタンスを構成するクラスを提供することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:183
